Flexbox ignores margins of absolute positioned children when `align-items: flex-end` or `justify-content: flex-end` https://bugs.webkit.org/show_bug.cgi?id=234143

Patch by Vitaly Dyachkov <obyknovenius@me.com> on 2021-12-16
Reviewed by Sergio Villar Senin.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-flexbox/abspos/flex-abspos-staticpos-margin-003-expected.html: Added.
* web-platform-tests/css/css-flexbox/abspos/flex-abspos-staticpos-margin-003.html: Added.
* web-platform-tests/css/css-flexbox/abspos/position-absolute-015-expected.txt: Replaced FAIL
by PASS expectations.

Source/WebCore:

When flexbox layouts its children every absolutely-positioned child is processed separately from regular flex items as it were the sole flex item.
Absolutely-positioned can be both main- and cross-axis aligned. To correctly align it we first must calculate available space for it.
To do that the code was correctly subtracting the size of the item from the size of the container but was not subtracting the margins.
Fixed by including the margins into available size calculation.

Test: imported/w3c/web-platform-tests/css/css-flexbox/abspos/flex-abspos-staticpos-margin-003.html

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::mainAxisMarginExtentForChild const):
(WebCore::RenderFlexibleBox::staticMainAxisPositionForPositionedChild):

LayoutTests:

* TestExpectations: Unksipped a flexbox test that is now passing.


Canonical link: https://commits.webkit.org/245312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287128 268f45cc-cd09-0410-ab3c-d52691b4dbfc